include/tvm/ffi/c_api.h

// [TVMFFITypeIndex.end]

/*! \brief Handle to Object from C API's pov */
typedef void* TVMFFIObjectHandle;
// [TVMFFIObject.begin]
/*!
 * \brief C-based type of all FFI object header that allocates on heap.
 */
typedef struct {
  /*!
   * \brief Combined strong and weak reference counter of the object.
   *
   * Strong ref counter is packed into the lower 32 bits.
   * Weak ref counter is packed into the upper 32 bits.
   *
   * It is equivalent to { uint32_t strong_ref_count, uint32_t weak_ref_count }
   * in little-endian structure:
   *
   * - strong_ref_count: `combined_ref_count & 0xFFFFFFFF`
   * - weak_ref_count: `(combined_ref_count >> 32) & 0xFFFFFFFF`
   *
   * Rationale: atomic ops on strong ref counter remains the same as +1/-1,
   * this combined ref counter allows us to use u64 atomic once
   * instead of a separate atomic read of weak counter during deletion.
   *
   * The ref counter goes first to align ABI with most intrusive ptr designs.
   * It is also likely more efficient as rc operations can be quite common.
   */
  uint64_t combined_ref_count;
  /*!
   * \brief type index of the object.
   * \note The type index of Object and Any are shared in FFI.
   */
  int32_t type_index;
  /*! \brief Extra padding to ensure 8 bytes alignment. */
  uint32_t __padding;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  union {
#endif
    /*!
     * \brief Deleter to be invoked when strong reference counter goes to zero.
     * \param self The self object handle.
     * \param flags The flags to indicate deletion behavior.
     * \sa TVMFFIObjectDeleterFlagBitMask
     */
    void (*deleter)(void* self, int flags);
    /*!
     * \brief auxilary field to TVMFFIObject is always 8 bytes aligned.
     * \note This helps us to ensure cross platform compatibility.
     */
    int64_t __ensure_align;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  };
#endif
} TVMFFIObject;
// [TVMFFIObject.end]

// [TVMFFIAny.begin]
/*!
 * \brief C-based type of all on stack Any value.
 *
 * Any value can hold on stack values like int,
 * as well as reference counted pointers to object.
 */
typedef struct {
  /*!
   * \brief type index of the object.
   * \note The type index of Object and Any are shared in FFI.
   */
  int32_t type_index;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  union {  // 4 bytes
#endif
    /*! \brief padding, must set to zero for values other than small string. */
    uint32_t zero_padding;
    /*!
     * \brief Length of small string, with a max value of 7.
     *
     * We keep small str to start at next 4 bytes to ensure alignment
     * when accessing the small str content.
     */
    uint32_t small_str_len;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  };
#endif
#if !defined(TVM_FFI_DOXYGEN_MODE)
  union {  // 8 bytes
#endif
    /*! \brief integers */
    int64_t v_int64;
    /*! \brief floating-point numbers */
    double v_float64;
    /*! \brief typeless pointers */
    void* v_ptr;
    /*! \brief raw C-string */
    const char* v_c_str;
    /*! \brief ref counted objects */
    TVMFFIObject* v_obj;
    /*! \brief data type */
    DLDataType v_dtype;
    /*! \brief device */
    DLDevice v_device;
    /*! \brief small string */
    char v_bytes[8];
    /*! \brief uint64 repr mainly used for hashing */
    uint64_t v_uint64;
#if !defined(TVM_FFI_DOXYGEN_MODE)
  };
#endif
} TVMFFIAny;
// [TVMFFIAny.end]

// [TVMFFIByteArray.begin]
/*!
 * \brief Byte array data structure used by String and Bytes.
 *
 * String and Bytes object layout = { TVMFFIObject, TVMFFIByteArray, ... }
 *
 * \note This byte array data structure layout differs in 32/64 bit platforms.
 *       as size_t equals to the size of the pointer, use this convetion to
 *       be consistent with std::string and also avoid need to calculate padding
 *       for the size field on 32-bit platforms.
 *       The FFI binding should be careful when treating this ABI.
 */
typedef struct {
  /*! \brief The data pointer. */
  const char* data;
  /*! \brief The size of the data. */
  size_t size;
} TVMFFIByteArray;
// [TVMFFIErrorCell.end]

// [TVMFFISafeCallType.begin]
/*!
 * \brief Type that defines C-style safe call convention
 *
 * Safe call explicitly catches exception on function boundary.
 *
 * \param handle The function handle
 * \param num_args Number of input arguments
 * \param args The input arguments to the call.
 * \param result Store output result.
 *
 * IMPORTANT: caller must initialize result->type_index to be kTVMFFINone,
 * or any other value smaller than kTVMFFIStaticObjectBegin.
 *
 * \return The call returns 0 if call is successful.
 *  It returns non-zero value if there is an error.
 *
 *  Possible return error of the API functions:
 *  * 0: success
 *  * -1: error happens, can be retrieved by TVMFFIErrorMoveFromRaised
 *
 * \note We decided to leverage TVMFFIErrorMoveFromRaised and TVMFFIErrorSetRaised
 *  for C function error propagation. This design choice, while
 *  introducing a dependency for TLS runtime, simplifies error
 *  propgation in chains of calls in compiler codegen.
 *  As we do not need to propagate error through argument but simply
 *  set them in the runtime environment.
 *
 * \sa TVMFFIErrorMoveFromRaised
 * \sa TVMFFIErrorSetRaised
 * \sa TVMFFIErrorSetRaisedFromCStr
 * \sa TVMFFIErrorSetRaisedFromCStrParts
 */
typedef int (*TVMFFISafeCallType)(void* handle, const TVMFFIAny* args, int32_t num_args,
                                  TVMFFIAny* result);
/*!
 * \brief Create an Opaque object by passing in handle, type_index and deleter.
 *
 * The opaque object's lifetime is managed as an Object, so it can be retained
 * and released like other objects.
 * When the opaque object is kTVMFFIOpaquePyObject, it can be converted back to
 * the python type when returned or passed as arguments to a python function.
 *
 * We can support ffi::Function that interacts with these objects,
 * most likely callback registered from python.
 *
 * For language bindings, we only convert types that we do not recognize into this type.
 * On the C++ side, the most common way to represent such OpaqueObject is to simply
 * use ffi::ObjectRef or ffi::Any.
 *
 * \param handle The resource handle of the opaque object.
 * \param type_index The type index of the object.
 * \param deleter deleter to recycle
 * \param out The output of the opaque object.
 * \return 0 when success, nonzero when failure happens
 *
 * \note The caller must ensure the type_index is a valid opaque object type index.
 * \sa kTVMFFIOpaquePyObject
 */
TVM_FFI_DLL int TVMFFIObjectCreateOpaque(void* handle, int32_t type_index,
                                         void (*deleter)(void* handle), TVMFFIObjectHandle* out);
/*!
 * \brief Convert type key to type index.
 * \param type_key The key of the type.
 * \param out_tindex the corresponding type index.
 * \return 0 when success, nonzero when failure happens
 */
TVM_FFI_DLL int TVMFFITypeKeyToIndex(const TVMFFIByteArray* type_key, int32_t* out_tindex);
//-----------------------------------------------------------------------
// Section: Basic function calling API for function implementation
//-----------------------------------------------------------------------
/*!
 * \brief Create a FFIFunc by passing in callbacks from a C callback.
 * The registered function can then be retrieved by the backend using its name.
 * \param self The resource handle of the C callback.
 * \param safe_call The C callback implementation.
 * \param deleter The deleter to recycle.
 * \param out The output of the function.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIFunctionCreate(void* self, TVMFFISafeCallType safe_call,
                                     void (*deleter)(void* self), TVMFFIObjectHandle* out);
/*!
 * \brief Get a global function registered in the system.
 * \param name The name of the function.
 * \param out The result function pointer, NULL if it does not exist.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIFunctionGetGlobal(const TVMFFIByteArray* name, TVMFFIObjectHandle* out);
/*!
 * \brief Convert an AnyView to an owned Any.
 * \param any_view The AnyView to convert.
 * \param out The output Any, must be an empty object.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIAnyViewToOwnedAny(const TVMFFIAny* any_view, TVMFFIAny* out);
/*!
 * \brief Call a FFIFunc by passing in arguments.
 * \param func The resource handle of the C callback.
 * \param args The input arguments to the call.
 * \param num_args The number of input arguments.
 * \param result The output result, caller must ensure result->type_index is set to kTVMFFINone.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIFunctionCall(TVMFFIObjectHandle func, TVMFFIAny* args, int32_t num_args,
                                   TVMFFIAny* result);
/*!
 * \brief Move the last error from the environment to the result.
 * \param result The result error.
 * \note This function clears the error stored in the TLS.
 */
TVM_FFI_DLL void TVMFFIErrorMoveFromRaised(TVMFFIObjectHandle* result);
/*!
 * \brief Set a raised error in TLS, which can be fetched by TVMFFIErrorMoveFromRaised.
 * \param error The error object handle
 */
TVM_FFI_DLL void TVMFFIErrorSetRaised(TVMFFIObjectHandle error);
/*!
 * \brief Set a raised error in TLS, which can be fetched by TVMFFIErrorMoveFromRaised.
 * \param kind The kind of the error.
 * \param message The error message.
 * \note This is a convenient method for the C API side to set an error directly from a string.
 */
TVM_FFI_DLL void TVMFFIErrorSetRaisedFromCStr(const char* kind, const char* message);
/*!
 * \brief Create an initial error object.
 * \param kind The kind of the error.
 * \param message The error message.
 * \param backtrace The backtrace of the error.
 * \param out The output error object handle.
 * \return 0 on success, nonzero on failure(likely MemoryError)
 *
 * \note This function is different from other functions as it is used in the error handling loop.
 *       So we do not follow normal error handling patterns. When error happens it will not set
 *       the error in TLS (since TLS error setting also involves creating an Error object).
 *       Instead, caller should simply report MemoryError to the logger.
 */
TVM_FFI_DLL int TVMFFIErrorCreate(const TVMFFIByteArray* kind, const TVMFFIByteArray* message,
                                  const TVMFFIByteArray* backtrace, TVMFFIObjectHandle* out);
//------------------------------------------------------------
// Section: DLPack support APIs
//------------------------------------------------------------
/*!
 * \brief Produce a managed Tensor from a DLPack tensor.
 * \param from The source DLPack tensor.
 * \param require_alignment The minimum alignment required of the data + byte_offset.
 * \param require_contiguous Boolean flag indicating if we need to check for contiguity.
 * \param out The output Tensor handle.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFITensorFromDLPack(DLManagedTensor* from, int32_t require_alignment,
                                       int32_t require_contiguous, TVMFFIObjectHandle* out);
/*!
 * \brief Produce a DLManagedTensor from the array that shares data memory with the array.
 * \param from The source array.
 * \param out The DLManagedTensor handle.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFITensorToDLPack(TVMFFIObjectHandle from, DLManagedTensor** out);
/*!
 * \brief Produce a managed Tensor from a DLPack tensor.
 * \param from The source DLPack tensor.
 * \param require_alignment The minimum alignment required of the data + byte_offset.
 * \param require_contiguous Boolean flag indicating if we need to check for contiguity.
 * \param out The output Tensor handle.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFITensorFromDLPackVersioned(DLManagedTensorVersioned* from,
                                                int32_t require_alignment,
                                                int32_t require_contiguous,
                                                TVMFFIObjectHandle* out);
/*!
 * \brief Produce a DLManagedTensor from the array that shares data memory with the array.
 * \param from The source array.
 * \param out The DLManagedTensor handle.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFITensorToDLPackVersioned(TVMFFIObjectHandle from,
                                              DLManagedTensorVersioned** out);
//---------------------------------------------------------------
// Section: string/bytes support APIs.
// These APIs are used to simplify the string/bytes construction
//---------------------------------------------------------------
/*!
 * \brief Reinterpret the content of TVMFFIByteArray to String.
 * \param input The TVMFFIByteArray to convert.
 * \param out The output String owned by the caller, maybe a SmallStr or a Str object.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIStringFromByteArray(const TVMFFIByteArray* input, TVMFFIAny* out);
/*!
 * \brief Reinterpret the content of TVMFFIByteArray to Bytes.
 * \param input The TVMFFIByteArray to convert.
 * \param out The output Bytes owned by the caller, maybe a SmallBytes or a Bytes object.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIBytesFromByteArray(const TVMFFIByteArray* input, TVMFFIAny* out);
//---------------------------------------------------------------
// Section: dtype string support APIs.
// These APIs are used to simplify the dtype printings during FFI
//---------------------------------------------------------------

/*!
 * \brief Convert a string to a DLDataType.
 * \param str The string to convert.
 * \param out The output DLDataType.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIDataTypeFromString(const TVMFFIByteArray* str, DLDataType* out);
/*!
* \brief Convert a DLDataType to a string.
* \param dtype The DLDataType to convert.
* \param out The output string.
* \return 0 on success, nonzero on failure.
* \note out is a String object that needs to be freed by the caller via TVMFFIObjectDecRef.
The content of string can be accessed via TVMFFIObjectGetByteArrayPtr.

* \note The input dtype is a pointer to the DLDataType to avoid ABI compatibility issues.
*/
TVM_FFI_DLL int TVMFFIDataTypeToString(const DLDataType* dtype, TVMFFIAny* out);
/*!
 * \brief Information support for optional object reflection.
 */
typedef struct {
  /*! \brief The name of the field. */
  TVMFFIByteArray name;
  /*! \brief The docstring about the field. */
  TVMFFIByteArray doc;
  /*! \brief The structured metadata of the field in JSON string. */
  TVMFFIByteArray metadata;
  /*!
   * \brief bitmask flags of the field.
   */
  int64_t flags;
  /*! \brief The size of the field. */
  int64_t size;
  /*! \brief The alignment of the field. */
  int64_t alignment;
  /*! \brief The offset of the field. */
  int64_t offset;
  /*! \brief The getter to access the field. */
  TVMFFIFieldGetter getter;
  /*!
   * \brief The setter to access the field.
   *
   * When kTVMFFIFieldFlagBitSetterIsFunctionObj is NOT set (default),
   * this is a TVMFFIFieldSetter function pointer (cast to void*).
   * When kTVMFFIFieldFlagBitSetterIsFunctionObj IS set,
   * this is a TVMFFIObjectHandle pointing to a FunctionObj.
   *
   * \note The setter is set even if the field is readonly for serialization.
   */
  void* setter;
  /*!
   * \brief The default value or default factory of the field.
   *
   * When flags has kTVMFFIFieldFlagBitMaskHasDefault set:
   * - If kTVMFFIFieldFlagBitMaskDefaultFromFactory is NOT set,
   *   this holds the static default value as AnyView.
   * - If kTVMFFIFieldFlagBitMaskDefaultFromFactory IS set,
   *   this holds a Function (() -> Any) that produces the default.
   */
  TVMFFIAny default_value_or_factory;
  /*!
   * \brief The compile-time static type index of the field.
   *
   * This reflects the type declared at compile time, which is only trustworthy
   * for statically-inferrable types. It does NOT necessarily match the runtime
   * type. For example, a field declared as `Any` will have
   * `field_static_type_index == kTVMFFIAny` even if it holds an `int` at runtime,
   * and `Array<Any>` will report `kTVMFFIArray` even though the elements may be
   * `Array<int>` at runtime.
   *
   * \warning Do NOT use this field to determine the actual type of a value at
   * runtime. It is purely a compile-time hint derived from the C++ field
   * declaration. The actual runtime type must be obtained from the value's
   * own `type_index`.
   *
   * \warning When the static type is a generic container (e.g. `Array<Any>`),
   * this field only tells you it is an Array — it says nothing about the
   * element types actually stored inside. Similarly, `kTVMFFIObject` only
   * means "some ObjectRef" without any subtype information.
   *
   * \note This is used by the serializer to inline POD field values directly
   * (avoiding node-graph overhead for None, Bool, Int, Float, DataType),
   * while routing other types through the node graph.
   */
  int32_t field_static_type_index;
} TVMFFIFieldInfo;
/*!
 * \brief Method information that can appear in reflection table.
 */
typedef struct {
  /*! \brief The name of the field. */
  TVMFFIByteArray name;
  /*! \brief The docstring about the method. */
  TVMFFIByteArray doc;
  // Rationale: We separate the docstring from the metadata since docstrings
  // can be unstructured and sometimes large, while metadata can be focused
  // on storing structured information.
  /*! \brief Optional structured metadata of the method in JSON string. */
  TVMFFIByteArray metadata;
  /*! \brief bitmask flags of the method. */
  int64_t flags;
  /*!
   * \brief The method wrapped as ffi::Function, stored as AnyView.
   * \note The first argument to the method is always the self for instance methods.
   */
  TVMFFIAny method;
} TVMFFIMethodInfo;
/*!
 * \brief Extra information of object type that can be used for reflection.
 *
 * \note This information is optional and can be used to enable reflection based
 *       creation of the object.
 */
typedef struct {
  /*! \brief The docstring about the object. */
  TVMFFIByteArray doc;
  /*!
   * \brief An optional function that can create a new empty instance of the type.
   *
   * When known_fixed_size is non-zero, creator can be called
   * with nullptr passed to optional_bytes.
   *
   * \note Caller must call setter for each field to initialize the object for
   *       the final object to be in valid state.
   *
   * \note This field is optional to enable reflection based creation.
   */
  TVMFFIObjectCreator creator;
  /*!
   * \brief Total size of the object struct, if it is fixed and known.
   *
   * This field is set optional and set to 0 if not registered.
   */
  int32_t total_size;
  /*!
   * \brief Optional meta-data for structural eq/hash.
   */
  TVMFFISEqHashKind structural_eq_hash_kind;
} TVMFFITypeMetadata;
struct TVMFFITypeInfo {
#else
typedef struct TVMFFITypeInfo {
#endif
  /*!
   *\brief The runtime type index,
   * It can be allocated during runtime if the type is dynamic.
   */
  int32_t type_index;
  /*! \brief number of parent types in the type hierachy. */
  int32_t type_depth;
  /*! \brief the unique type key to identify the type. */
  TVMFFIByteArray type_key;
  /*!
   * \brief type_ancestors[depth] stores the type_index of the acenstors at depth level
   * \note To keep things simple, we do not allow multiple inheritance so the
   *       hieracy stays as a tree
   */
  const struct TVMFFITypeInfo** type_ancestors;
  // The following fields are used for reflection
  /*! \brief Cached hash value of the type key, used for consistent structural hashing. */
  uint64_t type_key_hash;
  /*! \brief number of reflection accessible fields. */
  int32_t num_fields;
  /*! \brief number of reflection acccesible methods. */
  int32_t num_methods;
  /*! \brief The reflection field information. */
  const TVMFFIFieldInfo* fields;
  /*! \brief The reflection method. */
  const TVMFFIMethodInfo* methods;
  /*! \brief The extra information of the type. */
  const TVMFFITypeMetadata* metadata;
#ifdef __cplusplus
};
#else
} TVMFFITypeInfo;
/*!
 * \brief Register the function to runtime's global table.
 * The registered function can then be retrieved by the backend using its name.
 * \param name The name of the function.
 * \param f The function to be registered.
 * \param allow_override Whether to allow overriding an already registered function.
 * \return 0 on success, nonzero on failure.
 */
TVM_FFI_DLL int TVMFFIFunctionSetGlobal(const TVMFFIByteArray* name, TVMFFIObjectHandle f,
                                        int allow_override);
/*!
 * \brief Get dynamic type info by type index.
 * \pre type_index identifies a registered type.
 * \return The type info.
 */
TVM_FFI_DLL TVM_FFI_ATTRIBUTE_PURE const TVMFFITypeInfo* TVMFFIGetTypeInfo(int32_t type_index);