rust/tvm-ffi-sys/src/c_api.rs


unsafe extern "C" {
    pub fn TVMFFITypeKeyToIndex(type_key: *const TVMFFIByteArray, out_tindex: *mut i32) -> i32;
    pub fn TVMFFIFunctionGetGlobal(
        name: *const TVMFFIByteArray,
        out: *mut TVMFFIObjectHandle,
    ) -> i32;
    pub fn TVMFFIFunctionSetGlobal(
        name: *const TVMFFIByteArray,
        f: TVMFFIObjectHandle,
        can_override: i32,
    ) -> i32;
    pub fn TVMFFIFunctionCreate(
        self_ptr: *mut c_void,
        safe_call: TVMFFISafeCallType,
        deleter: Option<unsafe extern "C" fn(*mut c_void)>,
        out: *mut TVMFFIObjectHandle,
    ) -> i32;
    pub fn TVMFFIAnyViewToOwnedAny(any_view: *const TVMFFIAny, out: *mut TVMFFIAny) -> i32;
    pub fn TVMFFIFunctionCall(
        func: TVMFFIObjectHandle,
        args: *const TVMFFIAny,
        num_args: i32,
        result: *mut TVMFFIAny,
    ) -> i32;
    pub fn TVMFFIErrorMoveFromRaised(result: *mut TVMFFIObjectHandle);
    pub fn TVMFFIErrorSetRaised(error: TVMFFIObjectHandle);
    pub fn TVMFFIErrorSetRaisedFromCStr(kind: *const i8, message: *const i8);
    pub fn TVMFFIErrorCreate(
        kind: *const TVMFFIByteArray,
        message: *const TVMFFIByteArray,
        backtrace: *const TVMFFIByteArray,
        out: *mut TVMFFIObjectHandle,
    ) -> i32;
    pub fn TVMFFITensorFromDLPack(
        from: *mut c_void,
        require_alignment: i32,
        require_contiguous: i32,
        out: *mut TVMFFIObjectHandle,
    ) -> i32;
    pub fn TVMFFITensorToDLPack(from: TVMFFIObjectHandle, out: *mut *mut c_void) -> i32;
    pub fn TVMFFITensorFromDLPackVersioned(
        from: *mut c_void,
        require_alignment: i32,
        require_contiguous: i32,
        out: *mut TVMFFIObjectHandle,
    ) -> i32;
    pub fn TVMFFITensorToDLPackVersioned(from: TVMFFIObjectHandle, out: *mut *mut c_void) -> i32;
    pub fn TVMFFIStringFromByteArray(input: *const TVMFFIByteArray, out: *mut TVMFFIAny) -> i32;
    pub fn TVMFFIBytesFromByteArray(input: *const TVMFFIByteArray, out: *mut TVMFFIAny) -> i32;
    pub fn TVMFFIDataTypeFromString(str: *const TVMFFIByteArray, out: *mut DLDataType) -> i32;
    pub fn TVMFFIDataTypeToString(dtype: *const DLDataType, out: *mut TVMFFIAny) -> i32;
    pub fn TVMFFITraceback(
        filename: *const i8,
        lineno: i32,
        func: *const i8,
        cross_ffi_boundary: i32,
    ) -> *const TVMFFIByteArray;
    pub fn TVMFFIGetTypeInfo(type_index: i32) -> *const TVMFFITypeInfo;
    pub fn TVMFFITestingDummyTarget() -> i32;
}
